# xcbCppWraper

./: README.md
src/: CMakeLists.txt  damage.hpp  defines.hpp  drawable.cpp  drawable.hpp  drawablegeometry.cpp  drawablegeometry.hpp  errno-exception.cpp  errno-exception.hpp  event.hpp  exception.cpp  exception.hpp  extension_query_version.hpp  pixmap.cpp  pixmap.hpp  point.hpp  posix-shm.cpp  posix-shm.hpp  types.hpp  window.cpp  window.hpp  winintersection.cpp  winintersection.hpp  xcbconnection.cpp  xcbconnection.hpp  xcbinternatom.hpp  xcbwindowprop.cpp  xcbwindowprop.hpp  xorg_extensions_info.cpp  xorg_extensions_info.hpp
